--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -553,7 +553,7 @@ BrowserTreePopupMenu.disconnect=Disconnect
 BrowserTreePopupMenu.create=Create
 BrowserTreePopupMenu.edit=Edit
 BrowserTreePopupMenu.reload=Reload {0}
-BrowserTreePopupMenu.recycle Recycle this Connection
+BrowserTreePopupMenu.recycle=Recycle this Connection
 BrowserTreePopupMenu.switchDefaultCatalogAndSchemaDisplay=Show only default Catalog or Schema
 BrowserTreePopupMenu.addNewConnection=New Connection
 BrowserTreePopupMenu.duplicate=Duplicate
@@ -631,7 +631,7 @@ ConnectionPanel.Role=Role:
 ConnectionPanel.JDBCProperties=JDBC Properties
 ConnectionPanel.advPropsPanel.text1=Enter any key/value pair properties for this connection
 ConnectionPanel.advPropsPanel.text2=Refer to the relevant JDBC driver documentation for possible entries
-ConnectionPanel.txApplyButton.tool-tip Apply this level to all open connections of this type
+ConnectionPanel.txApplyButton.tool-tip=Apply this level to all open connections of this type
 ConnectionPanel.DatabaseDefault=Database Default
 ConnectionPanel.TransactionIsolation=Transaction Isolation
 ConnectionPanel.advTxPanel.Text1=Default transaction isolation level for this connection
@@ -787,3 +787,61 @@ NamedObject.SYSTEM_TRIGGER=SYSTEM TRIGGERS
 NamedObject.DATABASE_TRIGGER=DATABASE TRIGGERS
 NamedObject.PACKAGE=PACKAGES
 NamedObject.ROLE=ROLES
+common.domain=DOMAIN
+BrowserDomainPanel.DatabaseDomain=Database Domain
+BrowserDomainPanel.table=Table: 
+BrowserDomainPanel.Domain=Domain
+BrowserDomainPanel.DomainName=Domain Name:
+common.size=Size
+common.scale=Scale
+common.required=Required
+common.default=Default
+common.ComputedSource=Computed Source
+common.drivers=Drivers
+common.subtype=Subtype
+common.encoding=Encoding
+BrowserExceptionPanel.ExceptionID=Exception ID: 
+BrowserExceptionPanel.Exception=Exception
+BrowserExceptionPanel.DatabaseException=Database Exception
+BrowserExceptionPanel.ExceptionName=Exception Name:
+BrowserIndexPanel.IncludedFields=Included Fields
+BrowserIndexPanel.Unique=Is Unique
+BrowserIndexPanel.Active=Is Active
+BrowserIndexPanel.Ascending=Ascending
+BrowserIndexPanel.Descending=Descending
+BrowserIndexPanel.TableName=Table Name:
+BrowserFunctionPanel.Source=Source
+BrowserIndexPanel.Sorting=Sorting:
+BrowserIndexPanel.IndexName=Index Name:
+BrowserIndexPanel.DatabaseIndex=Database Index
+BrowserProcedurePanel.source=Source
+HostPanel.DatabaseConnection=Database Connection
+HostPanel.DatabaseProperties=Database Properties
+HostPanel.SQLKeywords=SQL Keywords
+HostPanel.DataTypes=Data Types
+PropertyWrapperModel.property=Property
+PropertyWrapperModel.value=Value
+BrowserSequencePanel.DatabaseSequence=Database Sequence
+BrowserSequencePanel.SequenceName=Sequence Name: 
+BrowserSequencePanel.sequence=Sequence
+BrowserTriggerPanel.DatabaseTrigger=Database Trigger
+BrowserTriggerPanel.TriggerName=Trigger Name: 
+BrowserTriggerPanel.Trigger=Trigger
+BrowserTriggerPanel.Source=Source
+BrowserTriggerPanel.Active=Is Active
+BrowserTriggerPanel.ForTable=For Table: 
+BrowserTriggerPanel.BeforeAfter=Before/After:
+BrowserTriggerPanel.Position=Position:
+BrowserTriggerPanel.Event=Event:
+BrowserTriggerPanel.Before=Before:
+BrowserTriggerPanel.After=After:
+common.columns=Columns
+common.table=Table
+ObjectDefinitionPanel.DatabaseView=Database View
+MetaKeyPanel.DatabaseObject=Database Object: 
+MetaKeyPanel.ObjectTypeName=Object Type Name: 
+MetaKeyPanel.AvailableObjects=Available Objects
+MetaKeyPanel.NoObjects=No objects of this type are available.
+MetaKeyPanel.ObjectName=Object Name
+BrowserUDFPanel.DatabaseUDF=Database UDF
+BrowserUDFPanel.UDFName=UDF Name
