init Trace Manager

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -355,6 +355,7 @@ ManageShortcutsPanel.validation.uniqueName=The shortcut text for this entry alre
 ManageShortcutsPanel.validation.whitespace=Shortcut text must be unique and contain no whitespace.
 action.user-manager-command=User Manager
 action.grant-manager-command=Grant Manager
+action.trace-manager-command=Trace Manager
 # ---
 # package: org.executequery.gui.importexport
 # Sample ResourceBundle properties file
