--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -824,3 +824,4 @@ MetaKeyPanel.NoObjects=Нет доступных объектов данного
 MetaKeyPanel.ObjectName=Имя объекта
 BrowserUDFPanel.DatabaseUDF=Внешняя функция
 BrowserUDFPanel.UDFName=Имя функции
+action.trace-manager-command=Трейс Менеджер
