Ability to connect to specified server in user manager

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -459,8 +459,8 @@ action.create-database-command.description=Create Database
 action.user-manager-command.description=User manager
 action.grant-manager-command.description=Grant manager
 UserManagerPanel.UserManager=User Manager
-UserManagerPanel.database=database
-UserManagerPanel.server=server
+UserManagerPanel.database=Database
+UserManagerPanel.server=Server
 UserManagerPanel.Add=Add
 UserManagerPanel.Edit=Edit
 UserManagerPanel.Delete=Delete
@@ -483,7 +483,8 @@ UserManagerPanel.RoleName=Role name
 UserManagerPanel.Owner=Owner
 UserManagerPanel.message.create-role=Success
 UserManagerPanel.error.create-role=Error of create role\nSystem returned: \n
-UserManagerPanel.cancelButton=Cancel waiting fill
+UserManagerPanel.cancelButton=Cancel filling
+UserManagerPanel.connectButton=Connect
 # package org.executequery.gui.browser.nodes
 DatabaseTableNode.columns=Columns
 DatabaseTableNode.foreign-keys=Foreign Keys
