--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -379,6 +379,7 @@ UserManagerPanel.RoleName=Имя роли
 UserManagerPanel.Owner=Владелец
 UserManagerPanel.message.create-role=Роль создана
 UserManagerPanel.error.create-role=Ошибка создания роли\nСистема вернула:\n
+UserManagerPanel.connectButton=Подключиться
 WindowAddUser.UserName=Имя пользователя
 WindowAddUser.Password=Пароль
 WindowAddUser.ConfirmPassword=Потверждение пароля
