changed release notes

--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -826,3 +826,4 @@ MetaKeyPanel.ObjectName=Имя объекта
 BrowserUDFPanel.DatabaseUDF=Внешняя функция
 BrowserUDFPanel.UDFName=Имя функции
 action.trace-manager-command=Трейс Менеджер
+ReleaseNotesCommand.pathToNotes=org/executequery/release.notes
