deleted excess buttons help

--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -86,13 +86,11 @@ action.editor-command=Редактор запросов
 action.editor-conn-change-command=Закрыть подключение редактора
 action.editor-export-command=Экспорт результатов
 action.editor-format-sql-command=Формат SQL
-action.editor-help-command=Помошь по редактору запросов
 action.editor-next-command=Следующее утверждение
 action.editor-previous-command=Предыдущее утверждение
 action.editor-rs-metadata-command=Результаты метаданных
 action.editor-show-hide-rs-columns-command=Видимость столбцов результата
 action.editor-stop-command=Отмена выполнения утверждения
-action.erd-help-command=Помощь по ER-диаграммам
 action.execute-as-block-command=Выполнить как одиночное выражение
 action.execute-at-cursor-command=Выполнить после курсора
 action.execute-command=Выполнить
@@ -826,3 +824,4 @@ MetaKeyPanel.ObjectName=Имя объекта
 BrowserUDFPanel.DatabaseUDF=Внешняя функция
 BrowserUDFPanel.UDFName=Имя функции
 action.trace-manager-command=Трейс Менеджер
+ReleaseNotesCommand.pathToNotes=org/executequery/release.notes.ru
