--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -825,3 +825,40 @@ BrowserUDFPanel.DatabaseUDF=Внешняя функция
 BrowserUDFPanel.UDFName=Имя функции
 action.trace-manager-command=Трейс Менеджер
 ReleaseNotesCommand.pathToNotes=org/executequery/release.notes.ru
+TraceManagerPanel.Connection=Подключение
+TraceManagerPanel.Connections=Подключения
+TraceManagerPanel.OpenFileLog=Открыть файл с логом
+TraceManagerPanel.Database=База данных
+TraceManagerPanel.SessionName=Имя сессии
+TraceManagerPanel.Username=Имя пользователя
+TraceManagerPanel.Host=Сервер
+TraceManagerPanel.Port=Порт
+TraceManagerPanel.Password=Пароль
+TraceManagerPanel.Charset=Кодировка
+TraceManagerPanel.UseConfigFile=Использовать файл кофигурации
+TraceManagerPanel.LogToFile=Лог в файл
+TraceManagerPanel.HideTopPanel=Скрыть верхнюю панель
+TraceManagerPanel.Start=Старт
+TraceManagerPanel.ClearTable=Очистить таблицу
+TraceManagerPanel.Filter=Фильтр
+TraceManagerPanel.Highlight=Подсветка цветом
+TraceManagerPanel.Text=Текст:
+TraceManagerPanel.FilterColumn=Фильтр по столбцу:
+TraceManagerPanel.RawSQLColumn=Столбец SQL поля
+TraceManagerPanel.ServerVersion=Версия сервера
+TraceManagerPanel.ConfigFile=Файл конфига
+TraceManagerPanel.Save=Сохранить
+TraceManagerPanel.VisibleColumns=Видимые столбцы
+TraceManagerPanel.BuildConfigurationFile=Сгенерировать файл конфигурации
+TraceManagerPanel.SelectAll=Выделить все
+TraceManagerPanel.DeselectAll=Снять выделение со всех
+TraceManagerPanel.Stop=Стоп
+TraceManagerPanel.Sessions=Сессии
+TraceManagerPanel.ID=ID
+TraceManagerPanel.User=Пользователь
+TraceManagerPanel.Name=Имя
+TraceManagerPanel.Date=Дата
+TraceManagerPanel.Flags=Флаги
+TraceManagerPanel.SessionManager=Менеджер сессий
+TraceManagerPanel.ShowTopPanel=Показать верхнюю панель
+TraceManagerPanel.Refresh=Обновить
