Changed the command for the contents of the header

--- a/guide/general_defs.tex
+++ b/guide/general_defs.tex
@@ -272,7 +272,7 @@
 
 \newpage
 
-\fancyhead[R]{#1\\\leftmark}
+\fancyhead[R]{#1\\\rightmark}
 \fancyfoot[C]{\xhrulefill{red}{2mm} Стр. \thepage}
 
 \setcounter{tocdepth}{10}
