Added session manager description

--- a/guide/RedExpert_Guide-ru.tex
+++ b/guide/RedExpert_Guide-ru.tex
@@ -400,6 +400,9 @@ Red Expert использует информацию, доступную из у
 	\item Нажмите кнопку «Создать» для создания новой базы данных с введенные параметрами. 
 \end{enumerate}	
 
+\begin{redremark}
+При попытке создания базы данных может возникнуть ошибка шифрования сетевого соединения (wire encryption). Для поддержки шифрования необходима версия Java не ниже 1.8.0\_161 или установленное JCE дополнение. В противном случае следует изменить параметр \ttt{firebird.conf}: \ttt{WireCrypt = Disabled}.
+\end{redremark}
 
 \anonsubsection{Дополнительные параметры}
 
@@ -459,6 +462,10 @@ Red Expert позволяет одновременно использовать 
 	\item Нажмите кнопку «Подключиться», чтобы приложение попыталось установить соединение, используя введенные значения.
 \end{enumerate}	
 
+\begin{redremark}
+	При попытке подключения может возникнуть ошибка шифрования сетевого соединения (wire encryption). Для поддержки шифрования необходима версия Java не ниже 1.8.0\_161 или установленное JCE дополнение. В противном случае следует изменить параметр \ttt{firebird.conf}: \ttt{WireCrypt = Disabled}.
+\end{redremark}
+
 \anonsubsubsection{Расширенные параметры подключения}
 
 Дополнительные свойства соединения можно ввести, выбрав вкладку «Расширенные». На ней можно увидеть таблицу с двумя столбцами. Левый соответствует параметру подключения, а правый -- его значению. Обратитесь к соответствующей документации JDBC драйвера, чтобы узнать, какие (если есть) дополнительные параметры подключения к базе данных могут быть установлены.
@@ -493,6 +500,8 @@ Red Expert позволяет одновременно использовать 
 	isc\_dpb\_certificate & string & Алиас сертификата клиента при многофакторном подключении\\\hline
 	isc\_dpb\_verify\_server & -- & Флаг для проверки сертификата сервера (многофакторная аутентификация) \\\hline
 	isc\_dpb\_repository\_pin & string & Пин код для контейнера с сертификатом (многофакторная аутентификация)\\\hline
+	isc\_dpb\_wire\_crypt\_
+	level & string & Параметр устанавливает, следует ли шифровать сетевое соединение. Он может принимать три	возможных значения: \ttt{REQUIRED, ENABLED, DISABLED} и \ttt{DEFAULT}. По умолчанию шифрование включено (\ttt{Enabled}).\\\hline
 \end{longtable} 
 
 Ниже под таблицей предлагается выбрать уровень изоляции транзакций. Различные уровни изоляции транзакций определяют поведение данного клиентского приложения, запустившего эту транзакцию, по отношению к другим параллельным процессам, выполняющимся на любом компьютере локальной сети, одновременно выполняющих чтение и/или изменение в той же базе данных, что и текущий процесс. 
@@ -1431,6 +1440,9 @@ SELECT * FROM employees WHERE (surname = ?)
 \end{redremark} 
 
 \section{Выполнение SQL скриптов}\label{sec:execute_scripts}
+
+В разработке. 
+\begin{comment}
 Данная опция позволяет задать файл с SQL запросами для выполнения.
 
 \begin{enumerate}[leftmargin=39pt]
@@ -1446,6 +1458,7 @@ SELECT * FROM employees WHERE (surname = ?)
 	\item Нажмите кнопку \textit{Start}.
 	\item Сделайте \ttt{commit} или \ttt{rollback} транзакции, нажав на соответствующие кнопки.
 \end{enumerate}
+\end{comment}
 
 \section{Генерация SQL скриптов}
 
@@ -2091,7 +2104,14 @@ ER-диаграмма визуализирует табличные связи, 
 Для удобного просмотра содержимого выделенной строки предусмотрено поле \textit{SQL} под таблицей. Выберите с помощью выпадающего списка \textit{Raw SQL Column} наименование столбца, кликнете мышью на интересующую строку и в поле \textit{SQL} появится содержимое столбца выбранной строки.
 
 \anonsubsection{Session Manager}
-В разработке.
+Session Manager или Менеджер сессий отображает список всех доступных в настоящее время сеансов трассировки. Вкладка менеджера видна только при запущенной текущей сессии аудита. 
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width = 0.85\linewidth]{img/session_manager.png}
+\end{figure}
+
+В окне слева можно выбрать имя сессии и посмотреть информацию о ней (ID, запустившего пользователя, время запуска), а также завершить сеанс трассировки.
 
 \section{Системные журналы состояния}
 
