Added description Import of Connections

--- a/guide/RedExpert_Guide-ru.tex
+++ b/guide/RedExpert_Guide-ru.tex
@@ -466,6 +466,7 @@ Red Expert позволяет одновременно использовать 
 	При попытке подключения может возникнуть ошибка шифрования сетевого соединения (wire encryption). Для поддержки шифрования необходима версия Java не ниже 1.8.0\_161 или установленное JCE дополнение. В противном случае следует изменить параметр \ttt{firebird.conf}: \ttt{WireCrypt = Disabled}.
 \end{redremark}
 
+
 \anonsubsubsection{Расширенные параметры подключения}
 
 Дополнительные свойства соединения можно ввести, выбрав вкладку «Расширенные». На ней можно увидеть таблицу с двумя столбцами. Левый соответствует параметру подключения, а правый -- его значению. Обратитесь к соответствующей документации JDBC драйвера, чтобы узнать, какие (если есть) дополнительные параметры подключения к базе данных могут быть установлены.
@@ -538,6 +539,26 @@ Red Expert позволяет одновременно использовать 
 
 Для этого введите параметры подключения на вкладке «Базовые», переключитесь на вкладку «SSH Тоннель» и заполните параметры для SSH-соединения. Имя хоста переносится с вкладки «Базовые».
 
+\anonsubsection{Импорт подключений}
+Для тех, у кого уже есть настроенные в IBExpert подключения, разработана удобная опция импорта подключений в Red Expert.
+
+\begin{enumerate}[leftmargin=15pt]
+	\item Запустите IBExpert и откройте пункт меню \textit{Options} $\rightarrow$ \textit{Enviroment Options...}. Откроется дополнительное окно:
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width = 0.55\linewidth]{img/IBExpert_env_opt.png}
+	\end{figure}
+	\item Выберите пункт \textit{IBExpert User Database}.
+	\item В поле «User Database Connection String» прописан путь к пользовательской базе данных, которая хранит регистрационную информацию.
+	\item Далее запустите Red Expert и подключитесь к той пользовательской базе данных.
+	\item Выберите пункт меню \textit{База данных} $\rightarrow$ \textit{Подключения} $\rightarrow$ \textit{Импорт подключений} $\rightarrow$ \textit{Импорт подключений из базы данных}. Откроется окно:
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width = 0.35\linewidth]{img/import_connections.png}
+	\end{figure}
+	\item Выберите нужное подключение и нажмите \textit{OK}.
+	\item На панели «Подключения» Вы найдете импортированные подключения.
+\end{enumerate}	
 
 \anonsubsection{Закрытие соединения}
 
