fixed log out reddatabase.ru from menu

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -158,6 +158,7 @@ action.customise-tool-bars-command=Customise
 action.customise-query-editor-command=Query Editor Options
 action.feedback-command=Feedback
 action.comparerDB-command=Comparer DB
+action.exit-from-account-command=Log out from reddatabase.ru
 # action descriptions (tips)
 action.new-command.description=Open a New Editor
 action.close-selected-tab-1.description=Closes the selected central tab component
