--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -862,3 +862,4 @@ TraceManagerPanel.Flags=Флаги
 TraceManagerPanel.SessionManager=Менеджер сессий
 TraceManagerPanel.ShowTopPanel=Показать верхнюю панель
 TraceManagerPanel.Refresh=Обновить
+action.exit-from-account-command=Выйти из аккаунта reddatabase.ru
