added log in reddatabase.ru from menu

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -159,6 +159,7 @@ action.customise-query-editor-command=Query Editor Options
 action.feedback-command=Feedback
 action.comparerDB-command=Comparer DB
 action.exit-from-account-command=Log out from reddatabase.ru
+action.log-in-account-command=Log in reddatabase.ru
 # action descriptions (tips)
 action.new-command.description=Open a New Editor
 action.close-selected-tab-1.description=Closes the selected central tab component
@@ -885,3 +886,4 @@ TraceManagerPanel.Flags=Flags
 TraceManagerPanel.SessionManager=Session Manager
 TraceManagerPanel.ShowTopPanel=Show Top Panel
 TraceManagerPanel.Refresh=Refresh
+
