--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -863,3 +863,4 @@ TraceManagerPanel.SessionManager=Менеджер сессий
 TraceManagerPanel.ShowTopPanel=Показать верхнюю панель
 TraceManagerPanel.Refresh=Обновить
 action.exit-from-account-command=Выйти из аккаунта reddatabase.ru
+action.log-in-account-command=Войти на reddatabase.ru
