--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -886,4 +886,9 @@ TraceManagerPanel.Flags=Flags
 TraceManagerPanel.SessionManager=Session Manager
 TraceManagerPanel.ShowTopPanel=Show Top Panel
 TraceManagerPanel.Refresh=Refresh
-
+ReddatabaseAPI.message=To continue you need to enter\nyour login and password from the site reddatabase.ru\nAuthorization is required to send bug reports\nand automatically download updates from the site.
+ReddatabaseAPI.Authorization=Authorization
+LoginPasswordDialog.username=Username
+LoginPasswordDialog.password=Password
+LoginPasswordDialog.login=Login
+LoginPasswordDialog.register=Register
