--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -864,3 +864,9 @@ TraceManagerPanel.ShowTopPanel=Показать верхнюю панель
 TraceManagerPanel.Refresh=Обновить
 action.exit-from-account-command=Выйти из аккаунта reddatabase.ru
 action.log-in-account-command=Войти на reddatabase.ru
+ReddatabaseAPI.message=Для продолжения необходимо ввести логин и пароль\nдля входа на reddatabase.ru\nАвторизация необходима для отправки отчетов об ошибках\nи автоматического скачивания обновлений с сайта
+ReddatabaseAPI.Authorization=Авторизация
+LoginPasswordDialog.username=Имя пользователя
+LoginPasswordDialog.password=Пароль
+LoginPasswordDialog.login=Войти
+LoginPasswordDialog.register=Зарегистрироваться
